tests/paczka1/fuzzy1/54303500.err
Error in line 8: A489 S416 66,1
Error in line 7: ZA4y9Nf A904 48,9
Error in line 1: Vh0ncGB A489 87,7
Error in line 10: A489 A489 67,5
Error in line 23: 0cEdgah A489 30,8
Error in line 28: 0cEdgah A904 88,7
Error in line 20: A489 S416 97,7
